# austin-event-tracker

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  next-features.md  pyproject.toml
admin-ui/: .env.example  auth.ts  package-lock.json  package.json  proxy.ts
admin-ui/app/: globals.css  layout.tsx  page.tsx
admin-ui/components/: app-nav.tsx  calendar-panel.tsx  dashboard-panel.tsx  digest-detail-panel.tsx  digests-panel.tsx  jobs-panel.tsx  preferences-panel.tsx  prompts-panel.tsx  section-shell.tsx  signout-button.tsx  sources-panel.tsx  tracked-items-panel.tsx
admin-ui/lib/: api.ts  backend.ts  types.ts
docs/: admin-ui-vercel-deployment.md  deployment.md  google-calendar-configuration.md
docs/plans/: 2026-03-07-city-family-events-curator-design.md  2026-03-07-implementation-plan.md  2026-03-11-hosting-options-and-do512-research.md  2026-03-22-google-calendar-publishing.md  2026-04-05-admin-ui-jobs-digests-errors.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  (+5 more)
scripts/: google_calendar_bootstrap.py  seed.py
src/: main.py
tests/: conftest.py  test_api.py  test_calendar_integration.py  test_config.py  test_dedupe.py  test_digest.py  test_digest_job.py  test_e2e.py  test_ingest_job.py  test_ingestion.py  test_job_runtime_status.py  test_jobs.py  test_llm.py  test_models.py  test_notifications.py  test_ranking.py  test_schemas.py  test_source_bandsintown.py  test_source_chronicle.py  test_source_do512.py  test_source_eventbrite.py  test_source_instagram.py  test_sources_base.py  test_synthesis.py
(+76 files in other folders)
